@@ -5,7 +5,6 @@ import static seedu.address.testutil.Assert.assertThrows;
 import static seedu.address.testutil.TypicalTrips.PARIS;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
@@ -13,7 +12,7 @@ import seedu.address.commons.exceptions.IllegalValueException;
 import seedu.address.model.contact.Name;
 import seedu.address.model.trip.Accommodation;
 import seedu.address.model.trip.Itinerary;
-import seedu.address.model.trip.Trip;
+import seedu.address.model.trip.Note;
 import seedu.address.model.trip.TripDate;
 import seedu.address.model.trip.TripName;
 
@@ -21,8 +20,9 @@ public class JsonAdaptedTripTest {
     private static final String INVALID_NAME = "R@chel";
     private static final String INVALID_ACCOMMODATION = " ";
     private static final String INVALID_ITINERARY = " ";
-    private static final String INVALID_DATE = "32/13/2025";
+    private static final String INVALID_DATE = "1/1/202";
     private static final String INVALID_CUSTOMER_NAME = "R@chel";
+    private static final String INVALID_NOTE = " ";
 
     private static final String VALID_NAME = PARIS.getName().toString();
     private static final String VALID_ACCOMMODATION = PARIS.getAccommodation().toString();
@@ -30,20 +30,19 @@ public class JsonAdaptedTripTest {
     private static final String VALID_DATE = PARIS.getDate().toString();
     private static final List<String> VALID_CUSTOMER_NAMES = PARIS.getCustomerNames().stream()
             .map(Name::toString)
-            .collect(Collectors.toList());
+            .toList();
+    private static final String VALID_NOTE = PARIS.getNote().toString();
 
     @Test
     public void toModelType_validTripDetails_returnsTrip() throws Exception {
-        JsonAdaptedTrip trip = new JsonAdaptedTrip(VALID_NAME, VALID_ACCOMMODATION, VALID_ITINERARY,
-                VALID_DATE, VALID_CUSTOMER_NAMES);
-        Trip expectedTrip = PARIS;
-        assertEquals(expectedTrip, trip.toModelType());
+        JsonAdaptedTrip trip = new JsonAdaptedTrip(PARIS);
+        assertEquals(PARIS, trip.toModelType());
     }
 
     @Test
     public void toModelType_invalidName_throwsIllegalValueException() {
         JsonAdaptedTrip trip = new JsonAdaptedTrip(INVALID_NAME, VALID_ACCOMMODATION, VALID_ITINERARY,
-                VALID_DATE, VALID_CUSTOMER_NAMES);
+                VALID_DATE, VALID_CUSTOMER_NAMES, VALID_NOTE);
         String expectedMessage = TripName.MESSAGE_CONSTRAINTS;
         assertThrows(IllegalValueException.class, expectedMessage, trip::toModelType);
     }
@@ -51,7 +50,7 @@ public class JsonAdaptedTripTest {
     @Test
     public void toModelType_nullName_throwsIllegalValueException() {
         JsonAdaptedTrip trip = new JsonAdaptedTrip(null, VALID_ACCOMMODATION, VALID_ITINERARY,
-                VALID_DATE, VALID_CUSTOMER_NAMES);
+                VALID_DATE, VALID_CUSTOMER_NAMES, VALID_NOTE);
         String expectedMessage = String.format(JsonAdaptedTrip.MISSING_FIELD_MESSAGE_FORMAT,
                 TripName.class.getSimpleName());
         assertThrows(IllegalValueException.class, expectedMessage, trip::toModelType);
@@ -60,7 +59,7 @@ public class JsonAdaptedTripTest {
     @Test
     public void toModelType_invalidAccommodation_throwsIllegalValueException() {
         JsonAdaptedTrip trip = new JsonAdaptedTrip(VALID_NAME, INVALID_ACCOMMODATION, VALID_ITINERARY,
-                VALID_DATE, VALID_CUSTOMER_NAMES);
+                VALID_DATE, VALID_CUSTOMER_NAMES, VALID_NOTE);
         String expectedMessage = Accommodation.MESSAGE_CONSTRAINTS;
         assertThrows(IllegalValueException.class, expectedMessage, trip::toModelType);
     }
@@ -68,7 +67,7 @@ public class JsonAdaptedTripTest {
     @Test
     public void toModelType_nullAccommodation_throwsIllegalValueException() {
         JsonAdaptedTrip trip = new JsonAdaptedTrip(VALID_NAME, null, VALID_ITINERARY,
-                VALID_DATE, VALID_CUSTOMER_NAMES);
+                VALID_DATE, VALID_CUSTOMER_NAMES, VALID_NOTE);
         String expectedMessage = String.format(JsonAdaptedTrip.MISSING_FIELD_MESSAGE_FORMAT,
                 Accommodation.class.getSimpleName());
         assertThrows(IllegalValueException.class, expectedMessage, trip::toModelType);
@@ -77,7 +76,7 @@ public class JsonAdaptedTripTest {
     @Test
     public void toModelType_invalidItinerary_throwsIllegalValueException() {
         JsonAdaptedTrip trip = new JsonAdaptedTrip(VALID_NAME, VALID_ACCOMMODATION, INVALID_ITINERARY,
-                VALID_DATE, VALID_CUSTOMER_NAMES);
+                VALID_DATE, VALID_CUSTOMER_NAMES, VALID_NOTE);
         String expectedMessage = Itinerary.MESSAGE_CONSTRAINTS;
         assertThrows(IllegalValueException.class, expectedMessage, trip::toModelType);
     }
@@ -85,7 +84,7 @@ public class JsonAdaptedTripTest {
     @Test
     public void toModelType_nullItinerary_throwsIllegalValueException() {
         JsonAdaptedTrip trip = new JsonAdaptedTrip(VALID_NAME, VALID_ACCOMMODATION, null,
-                VALID_DATE, VALID_CUSTOMER_NAMES);
+                VALID_DATE, VALID_CUSTOMER_NAMES, VALID_NOTE);
         String expectedMessage = String.format(JsonAdaptedTrip.MISSING_FIELD_MESSAGE_FORMAT,
                 Itinerary.class.getSimpleName());
         assertThrows(IllegalValueException.class, expectedMessage, trip::toModelType);
@@ -94,7 +93,7 @@ public class JsonAdaptedTripTest {
     @Test
     public void toModelType_invalidDate_throwsIllegalValueException() {
         JsonAdaptedTrip trip = new JsonAdaptedTrip(VALID_NAME, VALID_ACCOMMODATION, VALID_ITINERARY,
-                INVALID_DATE, VALID_CUSTOMER_NAMES);
+                INVALID_DATE, VALID_CUSTOMER_NAMES, VALID_NOTE);
         String expectedMessage = TripDate.MESSAGE_CONSTRAINTS;
         assertThrows(IllegalValueException.class, expectedMessage, trip::toModelType);
     }
@@ -102,7 +101,7 @@ public class JsonAdaptedTripTest {
     @Test
     public void toModelType_nullDate_throwsIllegalValueException() {
         JsonAdaptedTrip trip = new JsonAdaptedTrip(VALID_NAME, VALID_ACCOMMODATION, VALID_ITINERARY,
-                null, VALID_CUSTOMER_NAMES);
+                null, VALID_CUSTOMER_NAMES, VALID_NOTE);
         String expectedMessage = String.format(JsonAdaptedTrip.MISSING_FIELD_MESSAGE_FORMAT,
                 TripDate.class.getSimpleName());
         assertThrows(IllegalValueException.class, expectedMessage, trip::toModelType);
@@ -112,8 +111,25 @@ public class JsonAdaptedTripTest {
     public void toModelType_invalidCustomerName_throwsIllegalValueException() {
         List<String> invalidCustomerNames = List.of(INVALID_CUSTOMER_NAME);
         JsonAdaptedTrip trip = new JsonAdaptedTrip(VALID_NAME, VALID_ACCOMMODATION, VALID_ITINERARY,
-                VALID_DATE, invalidCustomerNames);
+                VALID_DATE, invalidCustomerNames, VALID_NOTE);
         String expectedMessage = Name.MESSAGE_CONSTRAINTS;
+        assertThrows(IllegalValueException.class, expectedMessage, trip::toModelType);
+    }
+
+    @Test
+    public void toModelType_invalidNote_throwsIllegalValueException() {
+        JsonAdaptedTrip trip = new JsonAdaptedTrip(VALID_NAME, VALID_ACCOMMODATION, VALID_ITINERARY,
+                VALID_DATE, VALID_CUSTOMER_NAMES, INVALID_NOTE);
+        String expectedMessage = Note.MESSAGE_CONSTRAINTS;
+        assertThrows(IllegalValueException.class, expectedMessage, trip::toModelType);
+    }
+
+    @Test
+    public void toModelType_nullNote_throwsIllegalValueException() {
+        JsonAdaptedTrip trip = new JsonAdaptedTrip(VALID_NAME, VALID_ACCOMMODATION, VALID_ITINERARY,
+                VALID_DATE, VALID_CUSTOMER_NAMES, null);
+        String expectedMessage = String.format(JsonAdaptedTrip.MISSING_FIELD_MESSAGE_FORMAT,
+                Note.class.getSimpleName());
         assertThrows(IllegalValueException.class, expectedMessage, trip::toModelType);
     }
 }
